Side panel of Text editor re-scales if hovered the 1st time (if window not maximized) #34405

Closed
opened 2013-02-24 18:26:09 +01:00 by CodeManX · 12 comments
Member

%%%See video:
http://youtu.be/xh0Yj9Zd_k8

- Operating System, Graphics card ---

Windows 7, 64bit; Intel HD 3000

- Blender version with error, and version that worked ---

r53703, but not in <r52553

- Short description of error ---

As soon as I hover the Text editor's side panel (Ctrl+F), it changes scale of the UI elements (scales a bit down). Only happens on the very first time hovered and if Blender window isn't maximized.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  • Run blender
  • Go to Scripting view
  • Ctrl+F in Text editor area
  • Hover side panel with mouse%%%
%%%See video: http://youtu.be/xh0Yj9Zd_k8 - Operating System, Graphics card --- Windows 7, 64bit; Intel HD 3000 - Blender version with error, and version that worked --- >r53703, but not in <r52553 - Short description of error --- As soon as I hover the Text editor's side panel (Ctrl+F), it changes scale of the UI elements (scales a bit down). Only happens on the very first time hovered and if Blender window isn't maximized. - Steps for others to reproduce the error (preferably based on attached .blend file) --- - Run blender - Go to Scripting view - Ctrl+F in Text editor area - Hover side panel with mouse%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%We are in svn r54785 already, so you should check the official 2.66 release from blender.org first.

For me, it works all fine.%%%

%%%We are in svn r54785 already, so you should check the official 2.66 release from blender.org first. For me, it works all fine.%%%
Author
Member

%%%If you received this report as email, your mail client might haven't shown the > (greater than), i actually tested several versions and the problem exists for me in all revisions i tried from r53703 on (not in r52553, so introduced somewhere in between) - also tested 2.66 official!

Did some further testing and turned out, that it somehow related to the font size / dpi settings and window size:

  • if i scale blender window down and open that side panel, text is really small, unlike in other panels!
  • If i scale it up after that, it stays that tiny!

so the size change on first redraw only occurs at a certain window size, for me it has to be 1600x900 (not maximized). If i make the window a little smaller and open the side panel then, text size stays the same. But if i make it really small, text size becomes smaller too!

See attched GIF animation for size change on first redraw, and screenshot collage for window size relating to text size.%%%

%%%If you received this report as email, your mail client might haven't shown the > (greater than), i actually tested several versions and the problem exists for me in all revisions i tried from r53703 on (not in r52553, so introduced somewhere in between) - also tested 2.66 official! Did some further testing and turned out, that it somehow related to the font size / dpi settings and window size: - if i scale blender window down and open that side panel, text is really small, unlike in other panels! - If i scale it up after that, it stays that tiny! so the size change on first redraw only occurs at a certain window size, for me it has to be 1600x900 (not maximized). If i make the window a little smaller and open the side panel then, text size stays the same. But if i make it really small, text size becomes smaller too! See attched GIF animation for size change on first redraw, and screenshot collage for window size relating to text size.%%%
Member

%%%It's always best to stick official release builds for tests like this. Just to be sure we have exactly the same binaries.
Also check it with "factory settings" start, and open a text editor to see how it behaves.

If you then can get this error, save it as a .blend (and load to check if it has error still) and attach that here.

Whatever I try here (OSX iMac), the search panel button and font size stays perfectly the same, on any window size. Only when you make it totally tiny (320 pix) it just disappears for smaller text editors.

The trick is to find a way that others can redo this :) I doubt this is windows related, it's something you have saved in your user config maybe? Just try with factory settings to verify that.
%%%

%%%It's always best to stick official release builds for tests like this. Just to be sure we have exactly the same binaries. Also check it with "factory settings" start, and open a text editor to see how it behaves. If you then can get this error, save it as a .blend (and load to check if it has error still) and attach that here. Whatever I try here (OSX iMac), the search panel button and font size stays perfectly the same, on any window size. Only when you make it totally tiny (320 pix) it just disappears for smaller text editors. The trick is to find a way that others can redo this :) I doubt this is windows related, it's something you have saved in your user config maybe? Just try with factory settings to verify that. %%%
Author
Member

%%%Well, i tested several binaries:

blender-2.64-r52553-mingw64 - doesn't have this issue
blender-2.65-r53703-win32 - re-scales
blender-2.65-r53787-win64 - too
blender-2.65-r54287-win64 - too
blender-2.65-r54595-win64 - too
blender-2.66-r54697-win64 - too with latest stable binary

2.66 is the first blender version with 2.66 user dir, post-2.54-official bins i tried used 2.65 user dir. So at least 2.66 had no custom user settings, and if i load factory settings, the re-scaling happens every time i load these settings (without restarting blender).

See attached images ("Bug different sizes"), these are taken after loading factory settings with 2.66 official binary on windows os.%%%

%%%Well, i tested several binaries: blender-2.64-r52553-mingw64 - doesn't have this issue blender-2.65-r53703-win32 - re-scales blender-2.65-r53787-win64 - too blender-2.65-r54287-win64 - too blender-2.65-r54595-win64 - too blender-2.66-r54697-win64 - too with latest stable binary 2.66 is the first blender version with 2.66 user dir, post-2.54-official bins i tried used 2.65 user dir. So at least 2.66 had no custom user settings, and if i load factory settings, the re-scaling happens every time i load these settings (without restarting blender). See attached images ("Bug different sizes"), these are taken after loading factory settings with 2.66 official binary on windows os.%%%
Author
Member

%%%typo: "post-2.54-official" --> post-2.65-official%%%

%%%typo: "post-2.54-official" --> post-2.65-official%%%
Member

%%%For sure I believe you, but the issue doesn't copy (yet) to someone else. Will ask others.%%%

%%%For sure I believe you, but the issue doesn't copy (yet) to someone else. Will ask others.%%%
Author
Member

%%%tested on a completely different system now, Windows XP, portable zip 2.66, no blender on that machine before -> also occurs here, but only at certain window size!

I believe i found what this relates to: the scrollbar of the text editor side panel!!!

In attached picture "Bug different sizes 3.png", you see the scrollbar of the panel. I need to scale window height so that scrollbar is visible but only scrolls the content by 1-2 pixels. Then I reloaded the factory settings and went to Scripting screen again ("Bug different sizes 4.png"). Note: no scrollbar! As soon as i cause a redraw by hovering the panel props, the down-scaling occurs ("Bug different sizes 5.png"), still no scrollbar.

It's a little tricky to get the exact window size, but if you got that, then I can reproduce this reliably even on a different machine with different screen resolution and aspect.%%%

%%%tested on a completely different system now, Windows XP, portable zip 2.66, no blender on that machine before -> also occurs here, but only at certain window size! I believe i found what this relates to: the scrollbar of the text editor side panel!!! In attached picture "Bug different sizes 3.png", you see the scrollbar of the panel. I need to scale window height so that scrollbar is visible but only scrolls the content by 1-2 pixels. Then I reloaded the factory settings and went to Scripting screen again ("Bug different sizes 4.png"). Note: no scrollbar! As soon as i cause a redraw by hovering the panel props, the down-scaling occurs ("Bug different sizes 5.png"), still no scrollbar. It's a little tricky to get the exact window size, but if you got that, then I can reproduce this reliably even on a different machine with different screen resolution and aspect.%%%

%%%Im able to "reproduce" using: blender-2.66-r54984-win32

screen resolution: 1366*768

1.'factory reset'
2.'Default Screen Layout'
3.Replace the 'Outliner' with 'Text Editor'
(Now, for the "re-scaling" effect to happen, the 'Text editor' window need to be small enough for a scrollbar to appear when pressing 'ctrl-f')
4. Depending on screen resolution: make the 'Properties' window taller/'Text Editor' smaller.
5.Press 'ctrl-f' and move the cursor to the panel that popped up to see this "re-scaling" effect.

Like Sebastian is saying, I belive that the panel is unaware of the scrollbar until hovering the cursor over it?
%%%

%%%Im able to "reproduce" using: blender-2.66-r54984-win32 screen resolution: 1366*768 1.'factory reset' 2.'Default Screen Layout' 3.Replace the 'Outliner' with 'Text Editor' (Now, for the "re-scaling" effect to happen, the 'Text editor' window need to be small enough for a scrollbar to appear when pressing 'ctrl-f') 4. Depending on screen resolution: make the 'Properties' window taller/'Text Editor' smaller. 5.Press 'ctrl-f' and move the cursor to the panel that popped up to see this "re-scaling" effect. Like Sebastian is saying, I belive that the panel is unaware of the scrollbar until hovering the cursor over it? %%%
Member

%%%Assigned to self, will check asap.%%%

%%%Assigned to self, will check asap.%%%
Member

%%%And, fix goes to svn! Thanks for the report :)%%%

%%%And, fix goes to svn! Thanks for the report :)%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34405
No description provided.