Bug fix #34405

On opening a text editor for first time, and use search (CTRL+F) the scrollers were not
correct initialized, so the view would jump a bit on redraw.